Se actualizaron los datos de CSS y HTML

--- a/index.html
+++ b/index.html
@@ -5,36 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <article class="container poppins-thin">
+    <div class="inf">
+      <h1 class="texto1">Reliable, efficient delivery</h1>
+      <h1 class="texto2">Powered by Technology</h1>
+      <p>  Our Artificial Intelligence powered tools use millions of project data <br> points 
+        to ensure that your project is successful</p>
+    </div>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+      <article class="infoP">
+        <div class="info1 info">
+          <hr class="line line1"> 
+          <div class="margen">
+            <h2>Supervisor</h2>
+            <p>Monitors activity to identify project roadblocks</p>
+            <img class="img" src="images/icon-supervisor.svg" alt="">
+          </div>
+        </div>
+        <div class="info2 info">
+          <hr class="line line2">
+          <div class="margen">
+            <h2>Team Builder</h2>
+            <p>Scans our talent network to create the optimal team for your project</p>
+            <img class="img" src="images/icon-team-builder.svg" alt="">
+          </div>
+        </div>
+        <div class="info3 info">
+          <hr class="line line3">
+          <div class="margen">
+            <h2>Karma</h2>
+            <p>Regularly evaluates our talent to ensure quality</p>
+            <img class="img" src="images/icon-karma.svg" alt="">
+          </div>
+        </div>
+       <div class="info4 info">
+          <hr class="line line4">
+          <div class="margen">
+            <h2>Calculator</h2>
+            <p>Uses data from past projects to provide better delivery estimates</p>
+            <img class="img" src="images/icon-calculator.svg" alt="">
+          </div>
+        </div>
+      </article>
+  </article>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
